house submission needed some cleaning more later

--- a/complete/house_prices/submission.ipynb
+++ b/complete/house_prices/submission.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Score:\n",
     "\n",
-    "- Most (ALL) of this inspiration comes from Kaggle user [Serigine](https://www.kaggle.com/serigne) and his excellent [tutorial](https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard)"
+    "- Most (ALL) of this inspiration comes from Kaggle user [Serigine](https://www.kaggle.com/serigne) and his excellent [tutorial](https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard)\n",
+    "\n",
+    "### Imports"
    ]
   },
   {
@@ -29,8 +31,15 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from scipy import stats\n",
-    "from scipy.stats import norm, skew"
+    "# from scipy import stats\n",
+    "# from scipy.stats import norm, skew"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data"
    ]
   },
   {
@@ -41,14 +50,21 @@
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv('../data/house_prices/train.csv')\n",
-    "test = pd.read_csv('../data/house_prices/test.csv')\n",
+    "train = pd.read_csv('../../data/house_prices/train.csv')\n",
+    "test = pd.read_csv('../../data/house_prices/test.csv')\n",
     "\n",
     "train_id = train['Id']\n",
     "test_id = test['Id']\n",
     "\n",
     "train.drop(\"Id\", axis = 1, inplace = True)\n",
     "test.drop(\"Id\", axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initial preprocessing and merging data"
    ]
   },
   {
@@ -59,34 +75,24 @@
    },
    "outputs": [],
    "source": [
-    "train = train.drop(train[(train['GrLivArea']>4000) & (train['SalePrice']<300000)].index)"
+    "# remove outliers (see analysis notebook)\n",
+    "train = train.drop(train[(train['GrLivArea']>4000) & (train['SalePrice']<300000)].index)\n",
+    "\n",
+    "# applies log(1+x) to all elements of the column\n",
+    "train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
+    "\n",
+    "train_N = train.shape[0]\n",
+    "train_y = train.SalePrice.values\n",
+    "\n",
+    "full = pd.concat((train, test)).reset_index(drop=True)\n",
+    "full.drop(['SalePrice'], axis=1, inplace=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#We use the numpy fuction log1p which  applies log(1+x) to all elements of the column\n",
-    "train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ntrain = train.shape[0]\n",
-    "ntest = test.shape[0]\n",
-    "y_train = train.SalePrice.values\n",
-    "all_data = pd.concat((train, test)).reset_index(drop=True)\n",
-    "all_data.drop(['SalePrice'], axis=1, inplace=True)"
+    "### Fill empty values"
    ]
   },
   {
@@ -106,32 +112,23 @@
     "# Fill empty values with 0\n",
     "for col in ('BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF','TotalBsmtSF', 'BsmtFullBath', 'BsmtHalfBath',\n",
     "           'GarageYrBlt', 'GarageArea', 'GarageCars', 'MasVnrArea'):\n",
-    "    all_data[col] = all_data[col].fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    all_data[col] = all_data[col].fillna(0)\n",
+    "    \n",
     "#Group by neighborhood and fill in missing value by the median LotFrontage of all the neighborhood\n",
     "all_data[\"LotFrontage\"] = all_data.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(\n",
-    "    lambda x: x.fillna(x.median()))"
+    "    lambda x: x.fillna(x.median()))\n",
+    "\n",
+    "for col in ('MSZoning', 'Electrical', 'KitchenQual', 'Exterior1st', 'Exterior2nd', 'SaleType'):\n",
+    "    all_data[col] = all_data[col].fillna(all_data[col].mode()[0])\n",
+    "    \n",
+    "all_data[\"Functional\"] = all_data[\"Functional\"].fillna(\"Typ\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "for col in ('MSZoning', 'Electrical', 'KitchenQual', 'Exterior1st', 'Exterior2nd', 'SaleType'):\n",
-    "    all_data[col] = all_data[col].fillna(all_data[col].mode()[0])"
+    "### Drop columns"
    ]
   },
   {
@@ -142,72 +139,7 @@
    },
    "outputs": [],
    "source": [
-    "# Drop utilities\n",
     "all_data = all_data.drop(['Utilities'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "all_data[\"Functional\"] = all_data[\"Functional\"].fillna(\"Typ\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Missing Ratio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Missing Ratio]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Check remaining missing values if any \n",
-    "all_data_na = (all_data.isnull().sum() / len(all_data)) * 100\n",
-    "all_data_na = all_data_na.drop(all_data_na[all_data_na == 0].index).sort_values(ascending=False)\n",
-    "missing_data = pd.DataFrame({'Missing Ratio' :all_data_na})\n",
-    "missing_data.head()"
    ]
   },
   {
@@ -245,6 +177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create new column Total Square Feet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
@@ -259,7 +198,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Again all credit goes to Serigine, I'm literally copying all of his code in this section"
+    "### Removing skew\n",
+    "\n",
+    "All of this skew analysis is thanks to Serginne"
    ]
   },
   {
@@ -365,38 +306,28 @@
     }
    ],
    "source": [
+    "from scipy.special import boxcox1p\n",
+    "\n",
     "numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
     "\n",
     "# Check the skew of all numerical features\n",
     "skewed_feats = all_data[numeric_feats].apply(lambda x: skew(x.dropna())).sort_values(ascending=False)\n",
-    "print(\"\\nSkew in numerical features: \\n\")\n",
+    "\n",
     "skewness = pd.DataFrame({'Skew' :skewed_feats})\n",
-    "skewness.head(10)"
+    "skewness = skewness[abs(skewness) > 0.75]\n",
+    "\n",
+    "skewed_features = skewness.index\n",
+    "lam = 0.15\n",
+    "\n",
+    "for feat in skewed_features:\n",
+    "    all_data[feat] = boxcox1p(all_data[feat], lam)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 59 skewed numerical features to Box Cox transform\n"
-     ]
-    }
-   ],
    "source": [
-    "skewness = skewness[abs(skewness) > 0.75]\n",
-    "print(\"There are {} skewed numerical features to Box Cox transform\".format(skewness.shape[0]))\n",
-    "\n",
-    "from scipy.special import boxcox1p\n",
-    "skewed_features = skewness.index\n",
-    "lam = 0.15\n",
-    "for feat in skewed_features:\n",
-    "    #all_data[feat] += 1\n",
-    "    all_data[feat] = boxcox1p(all_data[feat], lam)"
+    "### Turn categorical columns into dummy variables"
    ]
   },
   {
@@ -411,6 +342,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split the merged data back into train and test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
@@ -418,8 +356,15 @@
    },
    "outputs": [],
    "source": [
-    "train = all_data[:ntrain]\n",
-    "test = all_data[ntrain:]"
+    "train = all_data[:train_N]\n",
+    "test = all_data[train_N:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Machine Learning imports"
    ]
   },
   {
@@ -459,6 +404,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating different models\n",
+    "\n",
+    "The parameters for each of the models were suggested by Serginne for being very robust"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
@@ -490,6 +444,13 @@
     "                              bagging_freq = 5, feature_fraction = 0.2319,\n",
     "                              feature_fraction_seed=9, bagging_seed=9,\n",
     "                              min_data_in_leaf =6, min_sum_hessian_in_leaf = 11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Class to help stack different models"
    ]
   },
   {
@@ -590,6 +551,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### XG Boost Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -607,6 +575,13 @@
     "xgb_train_pred = model_xgb.predict(train)\n",
     "xgb_pred = np.expm1(model_xgb.predict(test))\n",
     "print(rmsle(y_train, xgb_train_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Light Gradient Boost Prediction"
    ]
   },
   {
@@ -630,6 +605,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merging all the different models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
@@ -641,6 +623,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving predictions to CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
@@ -648,12 +637,12 @@
    },
    "outputs": [],
    "source": [
-    "submission = pd.DataFrame({\n",
+    "predictions = pd.DataFrame({\n",
     "    'Id': test_id,\n",
     "    'SalePrice': ensemble\n",
     "})\n",
     "\n",
-    "submission.to_csv('/Users/pbezuhov/git/Kaggle/submissions/12_serigine.csv',index=False)"
+    "predictions.to_csv('../../submissions/12_serigine.csv',index=False)"
    ]
   },
   {
