added more comments to house submission

--- a/complete/house_prices/submission.ipynb
+++ b/complete/house_prices/submission.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Score:\n",
     "\n",
-    "- Most (ALL) of this inspiration comes from Kaggle user [Serigine](https://www.kaggle.com/serigne) and his excellent [tutorial](https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard)\n",
+    "- Most of this inspiration comes from Kaggle user [Serigine](https://www.kaggle.com/serigne) and his excellent [tutorial](https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard)\n",
     "\n",
     "### Imports"
    ]
@@ -29,10 +29,7 @@
     "color = sns.color_palette()\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "# from scipy import stats\n",
-    "# from scipy.stats import norm, skew"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -143,6 +140,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transforming numerical columns into categorical columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -150,9 +154,15 @@
    },
    "outputs": [],
    "source": [
-    "# Transforming numerical columns into categorical columns\n",
     "for col in ('MSSubClass', 'OverallCond', 'YrSold', 'MoSold'):\n",
     "    all_data[col] = all_data[col].apply(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Label encodes all the categorical columns"
    ]
   },
   {
@@ -164,6 +174,7 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
     "categorical_cols = ('FireplaceQu', 'BsmtQual', 'BsmtCond', 'GarageQual', 'GarageCond', \n",
     "        'ExterQual', 'ExterCond','HeatingQC', 'PoolQC', 'KitchenQual', 'BsmtFinType1', \n",
     "        'BsmtFinType2', 'Functional', 'Fence', 'BsmtExposure', 'GarageFinish', 'LandSlope',\n",
@@ -307,6 +318,8 @@
    ],
    "source": [
     "from scipy.special import boxcox1p\n",
+    "from scipy import stats\n",
+    "from scipy.stats import norm, skew\n",
     "\n",
     "numeric_feats = all_data.dtypes[all_data.dtypes != \"object\"].index\n",
     "\n",
@@ -388,6 +401,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validation scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
@@ -395,12 +415,13 @@
    },
    "outputs": [],
    "source": [
-    "n_folds = 5\n",
+    "kf = KFold(5, shuffle=True, random_state=42).get_n_splits(train.values)\n",
     "\n",
-    "def rmsle_cv(model):\n",
-    "    kf = KFold(n_folds, shuffle=True, random_state=42).get_n_splits(train.values)\n",
-    "    rmse= np.sqrt(-cross_val_score(model, train.values, y_train, scoring=\"neg_mean_squared_error\", cv = kf))\n",
-    "    return(rmse)"
+    "def cvs(model):\n",
+    "    return cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv=kf)\n",
+    "\n",
+    "def rms(y, y_pred):\n",
+    "    return np.sqrt(mean_squared_error(y, y_pred))"
    ]
   },
   {
@@ -498,6 +519,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stacking different models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -514,20 +542,17 @@
     "stacked_averaged_models = StackingAveragedModels(base_models = (ENet, GBoost, KRR),\n",
     "                                                 meta_model = lasso)\n",
     "\n",
-    "score = rmsle_cv(stacked_averaged_models)\n",
+    "score = csv(stacked_averaged_models)\n",
     "print(\"Stacking Averaged models score: {:.4f} ({:.4f})\".format(score.mean(), score.std()))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "def rmsle(y, y_pred):\n",
-    "    return np.sqrt(mean_squared_error(y, y_pred))"
+    "### Stacked Prediction"
    ]
   },
   {
@@ -544,10 +569,17 @@
     }
    ],
    "source": [
+    "# Fitting\n",
     "stacked_averaged_models.fit(train.values, y_train)\n",
+    "\n",
+    "# Predicting train values\n",
     "stacked_train_pred = stacked_averaged_models.predict(train.values)\n",
-    "stacked_pred = np.expm1(stacked_averaged_models.predict(test.values))\n",
-    "print(rmsle(y_train, stacked_train_pred))"
+    "\n",
+    "# Predicting test values\n",
+    "stacked_pred = stacked_averaged_models.predict(test.values)\n",
+    "stacked_pred = np.expm1(stacked_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
+    "\n",
+    "print(rms(train_y, stacked_train_pred))"
    ]
   },
   {
@@ -571,10 +603,17 @@
     }
    ],
    "source": [
+    "# Fitting\n",
     "model_xgb.fit(train, y_train)\n",
+    "\n",
+    "# Predicting train values\n",
     "xgb_train_pred = model_xgb.predict(train)\n",
-    "xgb_pred = np.expm1(model_xgb.predict(test))\n",
-    "print(rmsle(y_train, xgb_train_pred))"
+    "\n",
+    "# Predicting test values\n",
+    "xgb_pred = model_xgb.predict(test)\n",
+    "xgb_pred = np.expm1(xgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
+    "\n",
+    "print(rms(y_train, xgb_train_pred))"
    ]
   },
   {
@@ -598,10 +637,17 @@
     }
    ],
    "source": [
+    "# Fitting\n",
     "model_lgb.fit(train, y_train)\n",
+    "\n",
+    "# Predicting train values\n",
     "lgb_train_pred = model_lgb.predict(train)\n",
-    "lgb_pred = np.expm1(model_lgb.predict(test.values))\n",
-    "print(rmsle(y_train, lgb_train_pred))"
+    "\n",
+    "# Predicting test values\n",
+    "lgb_pred = model_lgb.predict(test.values)\n",
+    "lgb_pred = np.expm1(lgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
+    "\n",
+    "print(rms(y_train, lgb_train_pred))"
    ]
   },
   {
@@ -642,7 +688,7 @@
     "    'SalePrice': ensemble\n",
     "})\n",
     "\n",
-    "predictions.to_csv('../../submissions/12_serigine.csv',index=False)"
+    "predictions.to_csv('../../submissions/house.csv', index=False)"
    ]
   },
   {
