--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -58,50 +58,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/site-packages/numpy/lib/function_base.py:4116: RuntimeWarning: Invalid value encountered in percentile\n",
-      "  interpolation=interpolation)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from collections import Counter\n",
+    "# from collections import Counter\n",
     "\n",
-    "# Outlier detection curtesy of Yassine who in turn was motivated by the Tukey method\n",
-    "def detect_outliers(df, n, features):\n",
-    "    \"\"\"\n",
-    "    Takes a dataframe df of features and returns a list of the indices\n",
-    "    corresponding to the observations containing more than n outliers according\n",
-    "    to the Tukey method.\n",
-    "    \"\"\"\n",
-    "    outlier_indices = []\n",
+    "# # Outlier detection curtesy of Yassine who in turn was motivated by the Tukey method\n",
+    "# def detect_outliers(df, n, features):\n",
+    "#     \"\"\"\n",
+    "#     Takes a dataframe df of features and returns a list of the indices\n",
+    "#     corresponding to the observations containing more than n outliers according\n",
+    "#     to the Tukey method.\n",
+    "#     \"\"\"\n",
+    "#     outlier_indices = []\n",
     "    \n",
-    "    # iterate over features(columns)\n",
-    "    for col in features:\n",
-    "        Q1 = np.percentile(df[col], 25) # 1st quartile (25%)\n",
-    "        Q3 = np.percentile(df[col],75)  # 3rd quartile (75%)\n",
-    "        IQR = Q3 - Q1                   # Interquartile range (IQR)\n",
+    "#     # iterate over features(columns)\n",
+    "#     for col in features:\n",
+    "#         Q1 = np.percentile(df[col], 25) # 1st quartile (25%)\n",
+    "#         Q3 = np.percentile(df[col],75)  # 3rd quartile (75%)\n",
+    "#         IQR = Q3 - Q1                   # Interquartile range (IQR)\n",
     "    \n",
-    "        outlier_step = 1.5 * IQR\n",
-    "        outlier_list_col = df[(df[col] < Q1 - outlier_step) | (df[col] > Q3 + outlier_step )].index\n",
-    "        outlier_indices.extend(outlier_list_col)\n",
+    "#         outlier_step = 1.5 * IQR\n",
+    "#         outlier_list_col = df[(df[col] < Q1 - outlier_step) | (df[col] > Q3 + outlier_step )].index\n",
+    "#         outlier_indices.extend(outlier_list_col)\n",
     "        \n",
-    "    # select observations containing more than 2 outliers\n",
-    "    outlier_indices = Counter(outlier_indices)        \n",
-    "    multiple_outliers = list( k for k, v in outlier_indices.items() if v > n )\n",
+    "#     # select observations containing more than 2 outliers\n",
+    "#     outlier_indices = Counter(outlier_indices)        \n",
+    "#     multiple_outliers = list( k for k, v in outlier_indices.items() if v > n )\n",
     "    \n",
-    "    return multiple_outliers   \n",
+    "#     return multiple_outliers   \n",
     "\n",
-    "# detect outliers from Age, SibSp , Parch and Fare\n",
-    "outliers_to_drop = detect_outliers(train, 2, [\"Age\",\"SibSp\",\"Parch\",\"Fare\"])\n",
+    "# # detect outliers from Age, SibSp , Parch and Fare\n",
+    "# outliers_to_drop = detect_outliers(train, 2, [\"Age\",\"SibSp\",\"Parch\",\"Fare\"])\n",
     "\n",
-    "train = train.drop(outliers_to_drop, axis = 0).reset_index(drop=True)"
+    "# train = train.drop(outliers_to_drop, axis = 0).reset_index(drop=True)"
    ]
   },
   {
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -136,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -146,9 +137,9 @@
     "# Pulling the title information out of people's name (like mr, mrs, dr, etc)\n",
     "full['Title'] = full['Name'].str.extract(' ([A-Za-z]+)\\.', expand=False)\n",
     "\n",
-    "title_mapping = {\"Mr\": 0, \"Miss\": 1, \"Mrs\": 1, \"Mlle\": 1, \"Mme\": 1, \"Ms\": 3,\n",
-    "                 \"Master\": 2, \"Dr\": 3, \"Rev\": 3, \"Col\": 3, \"Major\": 3 ,\"Countess\": 3,\n",
-    "                 \"Lady\": 3, \"Jonkheer\": 3, \"Don\": 3, \"Dona\" : 3,\"Capt\": 3,\"Sir\": 3 }\n",
+    "title_mapping = {\"Mr\": 0, \"Miss\": 1, \"Mrs\": 2, \n",
+    "                 \"Master\": 3, \"Dr\": 3, \"Rev\": 3, \"Col\": 3, \"Major\": 3, \"Mlle\": 3,\"Countess\": 3,\n",
+    "                 \"Ms\": 3, \"Lady\": 3, \"Jonkheer\": 3, \"Don\": 3, \"Dona\" : 3, \"Mme\": 3,\"Capt\": 3,\"Sir\": 3 }\n",
     "\n",
     "full['Title'] = full['Title'].map(title_mapping)\n",
     "    \n",
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -244,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -339,7 +330,7 @@
        "      <td>female</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -377,7 +368,7 @@
        "      <td>female</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -417,13 +408,13 @@
        "\n",
        "   Survived  Title  Fsize  Single  SmallF  MedF  LargeF  \n",
        "0       0.0      0      2       0       1     0       0  \n",
-       "1       1.0      1      2       0       1     0       0  \n",
+       "1       1.0      2      2       0       1     0       0  \n",
        "2       1.0      1      1       1       0     0       0  \n",
-       "3       1.0      1      2       0       1     0       0  \n",
+       "3       1.0      2      2       0       1     0       0  \n",
        "4       0.0      0      1       1       0     0       0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -472,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -480,8 +471,11 @@
    "source": [
     "# convert to indicator values Title and Embarked \n",
     "full.Sex      = full.Sex.map(      { \"male\": 0, \"female\": 1}   )\n",
+    "\n",
     "full.Pclass   = full.Pclass.map(   { 1: 0, 2: 0.5, 3: 1}       )\n",
+    "\n",
     "full.Embarked = full.Embarked.map( { \"S\": 0, \"C\": 0.5, \"Q\": 1} )\n",
+    "\n",
     "full.Cabin    = full.Cabin.map(    { \"None\": 0, \"C\": 0.2, \"B\": 0.4,\n",
     "                                     \"D\": 0.6, \"E\": 0.8, \"A\": 1,\n",
     "                                     \"F\": 1, \"G\": 1, \"T\": 1} )"
@@ -496,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -591,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -605,17 +599,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done 920 tasks      | elapsed:    3.1s\n",
-      "[Parallel(n_jobs=4)]: Done 1120 out of 1120 | elapsed:    3.6s finished\n"
+      "[Parallel(n_jobs=4)]: Done 816 tasks      | elapsed:    3.0s\n",
+      "[Parallel(n_jobs=4)]: Done 1120 out of 1120 | elapsed:    3.9s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.79795686719636771"
+       "0.7991021324354658"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -663,8 +657,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    6.8s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   25.9s\n",
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    6.2s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   26.6s\n",
       "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.1min\n",
       "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.4min finished\n"
      ]
@@ -672,10 +666,10 @@
     {
      "data": {
       "text/plain": [
-       "0.82633371169125991"
+       "0.83164983164983164"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +688,7 @@
     "              \"criterion\": [\"gini\"]}\n",
     "\n",
     "\n",
-    "gsExtC = GridSearchCV(ExtC,param_grid = ex_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "gsExtC = GridSearchCV(ExtC, param_grid=ex_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose=1)\n",
     "\n",
     "gsExtC.fit(train_x, train_y)\n",
     "\n",
@@ -713,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -727,19 +721,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    6.9s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   31.4s\n",
-      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.4min\n",
-      "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.7min finished\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    6.8s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   30.7s\n",
+      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:  1.3min\n",
+      "[Parallel(n_jobs=4)]: Done 540 out of 540 | elapsed:  1.6min finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83087400681044266"
+       "0.83277216610549942"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -790,18 +784,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  76 tasks      | elapsed:    4.1s\n",
-      "[Parallel(n_jobs=4)]: Done 376 tasks      | elapsed:   18.0s\n",
-      "[Parallel(n_jobs=4)]: Done 720 out of 720 | elapsed:   35.7s finished\n"
+      "[Parallel(n_jobs=4)]: Done  76 tasks      | elapsed:    3.2s\n",
+      "[Parallel(n_jobs=4)]: Done 376 tasks      | elapsed:   15.4s\n",
+      "[Parallel(n_jobs=4)]: Done 720 out of 720 | elapsed:   29.4s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.83427922814982969"
+       "0.83726150392817056"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -849,17 +843,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  76 tasks      | elapsed:    3.7s\n",
-      "[Parallel(n_jobs=4)]: Done 280 out of 280 | elapsed:   24.9s finished\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:   12.1s\n",
+      "[Parallel(n_jobs=4)]: Done 280 out of 280 | elapsed:   24.7s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.82860385925085134"
+       "0.83277216610549942"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,21 +884,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'RFC_best' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-421d07270a03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_Survived_RFC\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRFC_best\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mtest_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"RFC\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest_Survived_ExtC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mExtC_best\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"ExtC\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest_Survived_SVMC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSVMC_best\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"SVC\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtest_Survived_AdaC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mada_best\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mtest_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Ada\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest_Survived_GBC\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mGBC_best\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mtest_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"GBC\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'RFC_best' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_Survived_RFC  = pd.Series(RFC_best.predict( test_x), name=\"RFC\")\n",
     "test_Survived_ExtC = pd.Series(ExtC_best.predict(test_x), name=\"ExtC\")\n",
@@ -938,20 +921,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "predictions = SVMC_best.predict(test_x) #votingC.predict(test_x)\n",
+    "# predictions = votingC.predict(test_x)\n",
+    "\n",
+    "pipeline = make_pipeline(Imputer(), SVC())\n",
+    "pipeline.fit(train_x, train_y)\n",
+    "predictions = pipeline.predict(test_x)\n",
     "\n",
     "predictions = pd.DataFrame({\n",
     "                            \"PassengerId\": test.PassengerId,\n",
     "                            \"Survived\": predictions\n",
     "                            })\n",
     "\n",
-    "predictions.to_csv(\"../../submissions/titanic.csv\",index=False)"
+    "predictions.to_csv(\"../../submissions/titanic_svc.csv\",index=False)"
    ]
   },
   {
